# embedded-example-stmh7

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STM32H7_FLASH.ld  docusaurus.config.js  empm.toml  main.c  openocd-external.cfg  openocd-wai.cfg  openocd.cfg  package.json
app/: CMakeLists.txt
app/lvgl_demo/: CMakeLists.txt
app/lvgl_demo/Src/: lv_port_disp.c  main.c
app/spi-lcd/: CMakeLists.txt
app/spi-lcd/Inc/: lv_conf.h
app/spi-lcd/Src/: lv_port_disp.c  main.c
app/src/: app.c
app/uart-print/: CMakeLists.txt
app/uart-print/src/: main.c
cmake/: gcc-arm-none-eabi.cmake
device/: CMakeLists.txt  CMakeLists.txt.back
device/board/fk/: .mxproject  CMakeLists.txt  STM32H7B0VBTx_FLASH.ld  h7b0.ioc
device/board/fk/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
device/board/fk/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  system_stm32h7xx.c
device/board/fk/bootloader/: CMakeLists.txt  STM32H7B0VBTx_FLASH.ld
device/board/fk/bootloader/inc/: ospi_w25q64.h  stm32h7xx_hal_conf.h
device/board/fk/bootloader/src/: main.c  ospi_w25q64.c
device/board/fk/cmake/: gcc-arm-none-eabi.cmake
device/board/fk/cmake/stm32cubemx/: CMakeLists.txt
device/board/fk/drivers_adapt/: CMakeLists.txt  hdm_config.h
device/board/fk/drivers_adapt/src/: uart.c
device/cubx/: .gitignore  .mxproject  examples.ioc  openocd.cfg
device/cubx/Core/Src/: app.c  main.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
docs/: index.md
drivers/: CMakeLists.txt
drivers/hdm/: CMakeLists.txt  README.md
drivers/hdm/core/: hdm_init.c
drivers/hdm/core/include/: hdm_uart.h
drivers/hdm/interfaces/: hdm.h
drivers/peripherals/lcd/: CMakeLists.txt
drivers/peripherals/lcd/include/: lcd_spi_200.h
drivers/peripherals/lcd/src/: lcd_spi_200.c
